# angelsoftworks-freertos-ecs

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  esp_build.sh  future_tasks.md
include/: common_types.h  config.h  main.h  system_state.h  wifi.h
main/: CMakeLists.txt  main.c  wifi.c
main/app/: gpio.c  gpio.h  time_sync.c  time_sync.h
main/drivers/: sensors.c  sensors.h
main/network/: wifi.c  wifi.h
main/tasks/: blink_task.c  blink_task.h  control_task.c  control_task.h  logger_task.c  logger_task.h  sensors_task.c  sensors_task.h  watchdog_task.c  watchdog_task.h
main/utils/: utils.c  utils.h
scripts/: esp_build.sh
